syntax = "proto3";

option java_multiple_files = true;
option java_package = "ProgressAssessment";
option java_outer_classname = "ProgressAssessmentImpl";

package ProgressAssessment;

// Interface exported by the server.
service ProgressAssessment{

  //add user here is client streaming
  rpc addUserDetail(stream AssessmentDetail) returns (ResponseMessage) {}

  //bookNext is server is unary
  rpc bookNextAssessment(BookRequest) returns (ResponseMessage) {}

}

message AssessmentDetail {
  string key = 1;
  string value = 2;
}

message ResponseMessage {
  string confirmed = 1;
}

message BookRequest {
  string username = 1;
}